# clevis

./: meson.build  meson_options.txt
.github/workflows/: build-package  build.yml  install-dependencies
packaging/: clevis.spec
packaging/debian/: changelog  clevis-dracut-zfs.install  clevis-dracut.README.Debian  clevis-dracut.install  clevis-dracut.triggers  clevis-initramfs-zfs.install  clevis-initramfs.README.Debian  clevis-initramfs.install  clevis-luks.install  clevis-luks.manpages  clevis-pkcs11.install  clevis-pkcs11.install.debian:bookworm  clevis-pkcs11.install.ubuntu:jammy  clevis-pkcs11.manpages  clevis-systemd.install  clevis-tpm2.install  clevis-tpm2.manpages  clevis-udisks2.install  clevis-udisks2.lintian-overrides  clevis-udisks2.postinst  clevis-udisks2.postrm  clevis-zfs.install  clevis.bash-completion  clevis.install  clevis.manpages  control  control.debian:bookworm  control.debian:latest  control.debian:stable  not-installed  rules  watch
packaging/debian/patches/: series
packaging/debian/patches/debian/: 2020-05-21.set-unprivileged-user.patch
packaging/debian/patches/for-upstream/: 2018-10-30.use-asciidoctor-to-build-manpages.patch  2020-05-21.embed-more-programs-in-initram.patch
packaging/debian/tests/: control  run-testsuite
src/: meson.build
src/dracut/: clevis-zfs-hook.sh.in  meson.build  module-setup.sh.in
